[package]
name = "driver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
windows-kernel-sys = { path = "../windows-kernel-sys" }

[build-dependencies]
thiserror = "1.0.31"
winreg = "0.10.1"